# samorev

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .samohost.toml  CLAUDE.md  README.md  SPEC.md  bunfig.toml  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.claude/: settings.json
.claude/commands/: review-mr.md
.github/workflows/: ci.yml
.samotest/scenarios/: readme-demo.yaml
agents/: bug-hunter.md  docs-reviewer.md  guidelines-checker.md  security-reviewer.md  sqitch-migration-checker.md  test-analyzer.md
docs/: bot-operation.md  demo.html  verdict-parsing.md
e2e-probe/: userdb.ts
e2e/scenarios/: landing.spec.ts  llm-review-cli.spec.ts
lib/: __init__.py  compliance.py  provider_planning.py  review_memory.py
samorev/: __init__.py  cli.py
scripts/: install-claude-command.sh  smoke-github-provider-path.sh
site/: index.html  style.css
src/: cli.ts  fetchReport.ts  providerPlanning.ts  providerPosting.ts
tests/: bun-cli.test.ts  conftest.py  large-diff-fix.test.ts  llm-review.test.ts  report-counts-labels.test.ts  requirements.txt  test_agents.py  test_cli_review.py  test_compliance.py  test_github_slash_command_path.py  test_provider_planning.py  test_public_branding.py  test_review_memory.py  test_slash_command_packaging.py
tests/fixtures/bugs/null_reference/: diff.patch  expected.json
tests/fixtures/bugs/off_by_one/: diff.patch  expected.json
tests/fixtures/bugs/race_condition/: diff.patch  expected.json
tests/fixtures/bugs/resource_leak/: diff.patch  (+1 more)
tests/lib/: compare.py  metrics.py  runner.sh
(+43 files in other folders)
