[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "samorev"
version = "0.3.0"
description = "CLI-first wrapper for samorev LLM-run reviews."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "samorev maintainers" }
]
keywords = ["code-review", "claude-code", "github", "gitlab", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/Tanya301/samorev"
Issues = "https://github.com/Tanya301/samorev/issues"
Source = "https://github.com/Tanya301/samorev"

[project.scripts]
samorev = "samorev.cli:main"

[tool.setuptools]
packages = ["samorev", "lib"]
include-package-data = true

[tool.setuptools.package-data]
samorev = ["py.typed"]

